==> idf/Robot-In-Maze/arduino_motor/libraries/PololuQTRSensors/PololuQTRSensors.cpp <==
#define F_CPU 20000000UL
#include <avr/io.h>
#include <stdlib.h>
#include "PololuQTRSensors.h"
  #define ANALOG_PORT PORTA
  #define ANALOG_DDR  DDRA
  #define ANALOG_PORT PORTC
  #define ANALOG_DDR  DDRC
#define QTR_RC		0
#define QTR_A		1
#include "../OrangutanDigital/OrangutanDigital.h" // provides pin definitions
#include "../OrangutanTime/OrangutanTime.h"		// provides access to delay routines
#include <Arduino.h> // provides access to delay() and delayMicroseconds()

void PololuQTRSensors::init(unsigned char numSensors, 
  unsigned char emitterPin, unsigned char type)
{
	calibratedMinimumOn=0;
	calibratedMaximumOn=0;
	calibratedMinimumOff=0;
	calibratedMaximumOff=0;

	if (numSensors > QTR_MAX_SENSORS)
		_numSensors = QTR_MAX_SENSORS;
	else
		_numSensors = numSensors;
		
	_type = type;

	struct IOStruct emitterIO;
	OrangutanDigital::getIORegisters(&emitterIO, emitterPin);
    _emitterBitmask = emitterIO.bitmask;
    _emitterPORT = emitterIO.portRegister;
    _emitterDDR = emitterIO.ddrRegister;
}

void PololuQTRSensors::emittersOff()
{
	if (_emitterDDR == 0)
		return;
	*_emitterDDR |= _emitterBitmask;
	*_emitterPORT &= ~_emitterBitmask;

	delayMicroseconds(200);  // Give the sensors time to react.
}

void PololuQTRSensors::emittersOn()
{
  if (_emitterDDR == 0)
		return;
	*_emitterDDR |= _emitterBitmask;
	*_emitterPORT |= _emitterBitmask;

	delayMicroseconds(200);  // Give the sensors time to react.
}

void PololuQTRSensorsRC::init(unsigned char* pins,
	unsigned char numSensors, unsigned int timeout, unsigned char emitterPin)
{
	PololuQTRSensors::init(numSensors, emitterPin, QTR_RC);
	
	unsigned char i;
    #ifdef _ORANGUTAN_XX4
	_portAMask = 0;
    #endif
	_portBMask = 0;
	_portCMask = 0;
	_portDMask = 0;
	
	_maxValue = timeout;
	for (i = 0; i < _numSensors; i++)
	{
		struct IOStruct sensorIO;
		OrangutanDigital::getIORegisters(&sensorIO, pins[i]);
		_bitmask[i] = sensorIO.bitmask;
		_register[i] = sensorIO.pinRegister;
        #ifdef _ORANGUTAN_XX4
		if (sensorIO.pinRegister == &PINA) { _portAMask |= sensorIO.bitmask; }
		#endif
		if (sensorIO.pinRegister == &PINB) { _portBMask |= sensorIO.bitmask; }
		if (sensorIO.pinRegister == &PINC) { _portCMask |= sensorIO.bitmask; }
		if (sensorIO.pinRegister == &PIND) { _portDMask |= sensorIO.bitmask; }
	}
}

void PololuQTRSensorsRC::readPrivate(unsigned int *sensor_values)
{
	unsigned char i;
	unsigned char last_time;
	unsigned char delta_time;
	unsigned int time = 0;

	#ifdef _ORANGUTAN_XX4
	unsigned char last_a = _portAMask;
    #endif
	unsigned char last_b = _portBMask;
	unsigned char last_c = _portCMask;
	unsigned char last_d = _portDMask;
	
	// reset the values
	for(i = 0; i < _numSensors; i++)
		sensor_values[i] = 0;
		
	// set all sensor pins to outputs
	#ifdef _ORANGUTAN_XX4
	DDRA |= _portAMask;
	#endif
	DDRB |= _portBMask;
	DDRC |= _portCMask;
	DDRD |= _portDMask;
	
	// drive high for 10 us
	#ifdef _ORANGUTAN_XX4
	PORTA |= _portAMask;
	#endif
	PORTB |= _portBMask;
	PORTC |= _portCMask;
	PORTD |= _portDMask;
	
	delayMicroseconds(10);
	
	// set all ports to inputs
	#ifdef _ORANGUTAN_XX4
	DDRA &= ~_portAMask;
	#endif
	DDRB &= ~_portBMask;
	DDRC &= ~_portCMask;
	DDRD &= ~_portDMask;
	
	// turn off pull ups
    #ifdef _ORANGUTAN_XX4
	PORTA &= ~_portBMask;
	#endif
	PORTB &= ~_portBMask;
	PORTC &= ~_portCMask;
	PORTD &= ~_portDMask;

	unsigned char prevTCCR2A = TCCR2A;
	unsigned char prevTCCR2B = TCCR2B;
	TCCR2A |= 0x03;
	TCCR2B = 0x02;		// run timer2 in normal mode at 2.5 MHz
						// this is compatible with OrangutanMotors

	last_time = TCNT2;
	while (time < _maxValue)
	{
		// Keep track of the total time.
		// This implicitly casts the difference to unsigned char, so
		// we don't add negative values.
		delta_time = TCNT2 - last_time;
		time += delta_time;
		last_time += delta_time;

		// continue immediately if there is no change
        #ifdef _ORANGUTAN_XX4
		if (PINA == last_a && PINB == last_b && PINC == last_c && PIND == last_d) continue;
		#else
		if (PINB == last_b && PINC == last_c && PIND == last_d) continue;
        #endif

		// save the last observed values
		#ifdef _ORANGUTAN_XX4
		last_a = PINA;
		#endif
		last_b = PINB;
		last_c = PINC;
		last_d = PIND;

		// figure out which pins changed
		for (i = 0; i < _numSensors; i++)
		{
			if (sensor_values[i] == 0 && !(*_register[i] & _bitmask[i]))
				sensor_values[i] = time;
		}
	}

	TCCR2A = prevTCCR2A;
	TCCR2B = prevTCCR2B;
	for(i = 0; i < _numSensors; i++)
		if (!sensor_values[i])
			sensor_values[i] = _maxValue;
}

void PololuQTRSensorsAnalog::init(unsigned char* analogPins,
	unsigned char numSensors, unsigned char numSamplesPerSensor,
	unsigned char emitterPin)
{
	unsigned char i;
	
	PololuQTRSensors::init(numSensors, emitterPin, QTR_A);
	
	_numSamplesPerSensor = numSamplesPerSensor;
	_portMask = 0;
	for (i = 0; i < _numSensors; i++)
	{
		_analogPins[i] = analogPins[i];
    	_portMask |= (1 << analogPins[i]);
	}

	#ifndef _ORANGUTAN_XX4
	// no need to mask for dedicated analog inputs ADC6 and ADC7
	_portMask &= 0x3F;
	#endif

	_maxValue = 1023; // this is the maximum returned by the A/D conversion
}

void PololuQTRSensorsAnalog::readPrivate(unsigned int *sensor_values)
{
	unsigned char i, j;
	
	// store current state of various registers
	unsigned char admux = ADMUX;
	unsigned char adcsra = ADCSRA;
	unsigned char ddr = ANALOG_DDR;
	unsigned char port = ANALOG_PORT;

	// wait for any current conversion to finish
	while (ADCSRA & (1 << ADSC));
	
	// reset the values
	for(i = 0; i < _numSensors; i++)
		sensor_values[i] = 0;

	// set all sensor pins to high-Z inputs
	ANALOG_DDR &= ~_portMask;
	ANALOG_PORT &= ~_portMask;

	ADCSRA = 0x87;	// configure the ADC
	for (j = 0; j < _numSamplesPerSensor; j++)
	{
		for (i = 0; i < _numSensors; i++)
		{
			ADMUX = (1<<6) | _analogPins[i];// set analog input channel
			ADCSRA |= 1 << ADSC;			// start the conversion
			while (ADCSRA & (1 << ADSC));	// wait for conversion to finish
			sensor_values[i] += ADC;		// add in the conversion result
		}
	}
	
	// get the rounded average of the readings for each sensor
	for (i = 0; i < _numSensors; i++)
		sensor_values[i] = (sensor_values[i] + (_numSamplesPerSensor >> 1)) /
			_numSamplesPerSensor;

	ADMUX = admux;
	ADCSRA = adcsra;
	ANALOG_PORT = port;
	ANALOG_DDR = ddr;
}
