==> luandalmazo/qtr-test-marquinhos/PololuQTRSensors.cpp <==
#include <stdlib.h>
#include "PololuQTRSensors.h"
#include "Arduino.h"
#define QTR_RC		0
#define QTR_A		1

void PololuQTRSensors::init(unsigned char *pins, unsigned char numSensors, 
  unsigned char emitterPin, unsigned char type)
{
	calibratedMinimumOn=0;
	calibratedMaximumOn=0;
	calibratedMinimumOff=0;
	calibratedMaximumOff=0;

	if (numSensors > QTR_MAX_SENSORS)
		_numSensors = QTR_MAX_SENSORS;
	else
		_numSensors = numSensors;

	if (_pins == 0)
	{
		_pins = (unsigned char*)malloc(sizeof(unsigned char)*_numSensors);
		if (_pins == 0)
		return;
	}

	unsigned char i;
	for (i = 0; i < _numSensors; i++)
	{
		_pins[i] = pins[i];
	}

	_emitterPin = emitterPin;
	_type = type;
}

void PololuQTRSensors::emittersOff()
{
	if (_emitterPin == QTR_NO_EMITTER_PIN)
		return;
	pinMode(_emitterPin, OUTPUT);
	digitalWrite(_emitterPin, LOW);
}

void PololuQTRSensors::emittersOn()
{
	if (_emitterPin == QTR_NO_EMITTER_PIN)
		return;
	pinMode(_emitterPin, OUTPUT);
	digitalWrite(_emitterPin, HIGH);
}

void PololuQTRSensorsRC::init(unsigned char* pins,
	unsigned char numSensors, unsigned int timeout, unsigned char emitterPin)
{
	PololuQTRSensors::init(pins, numSensors, emitterPin, QTR_RC);
	
	_maxValue = timeout;
}

void PololuQTRSensorsRC::readPrivate(unsigned int *sensor_values)
{
	unsigned char i;
	
	if (_pins == 0)
		return;

	for(i = 0; i < _numSensors; i++)
	{
		sensor_values[i] = _maxValue;
		digitalWrite(_pins[i], HIGH);	// make sensor line an output
		pinMode(_pins[i], OUTPUT);		// drive sensor line high
	}
	
	delayMicroseconds(10);				// charge lines for 10 us

	for(i = 0; i < _numSensors; i++)
	{
		pinMode(_pins[i], INPUT);		// make sensor line an input
		digitalWrite(_pins[i], LOW);		// important: disable internal pull-up!
	}

	unsigned long startTime = micros();	
	while (micros() - startTime < _maxValue)
	{
		unsigned int time = micros() - startTime;
		for (i = 0; i < _numSensors; i++)
		{
			if (digitalRead(_pins[i]) == LOW && time < sensor_values[i])
				sensor_values[i] = time;
		}
	}
}

void PololuQTRSensorsAnalog::init(unsigned char* pins,
	unsigned char numSensors, unsigned char numSamplesPerSensor,
	unsigned char emitterPin)
{	
	PololuQTRSensors::init(pins, numSensors, emitterPin, QTR_A);
	
	_numSamplesPerSensor = numSamplesPerSensor;
	_maxValue = 1023; // this is the maximum returned by the A/D conversion
}

void PololuQTRSensorsAnalog::readPrivate(unsigned int *sensor_values)
{
	unsigned char i, j;

	if (_pins == 0)
		return;

	// reset the values
	for(i = 0; i < _numSensors; i++)
		sensor_values[i] = 0;

	for (j = 0; j < _numSamplesPerSensor; j++)
	{
		for (i = 0; i < _numSensors; i++)
		{
			sensor_values[i] += analogRead(_pins[i]);	// add the conversion result
		}
	}
	
	// get the rounded average of the readings for each sensor
	for (i = 0; i < _numSensors; i++)
		sensor_values[i] = (sensor_values[i] + (_numSamplesPerSensor >> 1)) /
			_numSamplesPerSensor;
}
